--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
-body  {
+.dark  {
     background-color: #212529;
     color:#f8f9fa;
+}
+.light {
+    background-color:#f8f9fa;
+    color: #212529;
 }
 .contac {
     z-index: 1001;
@@ -45,7 +49,6 @@ a {
     padding: 10px;
 }
 .fa-envelope {
-    background-color:#f8f9fa;   
     color: #c62828;
 }
 small {
@@ -53,15 +56,10 @@ small {
     color: #7a7a7a;
     font-weight:600;
     font-size: 0.90em;
-    color: #f8f9fa;
     position: absolute;
     top: -30px;
 }
 .dev-img {
-    /*background-image: url(/img/dev.png);
-    background-repeat: no-repeat;
-    /*background-attachment: fixed;
-    background-size: 50%;*/
     width: 100%
 }
 .title {
@@ -75,9 +73,6 @@ small {
     display: inline;
     float:left;
     margin-bottom: 20px;
-}
-.collapsible-header {
-    background-color: #212529;
 }
 .li-icons {
     font-size: 30px;
@@ -95,12 +90,7 @@ small {
 .hoverable, .card {
     border-radius: 10px;
 }
-.main-title{
-    color: #2d2d2d;
-    text-align: center;
-    text-transform: capitalize;
-    padding: 0.7em 0;
-} 
+
 .content {
     position: relative;
     margin: auto;
@@ -165,9 +155,19 @@ small {
 .fixed-action-btn {
     top: 5%;
 }
-.floating-menu {
-    background-color: #f8f9fa;
-}
+
 .btn-floating .floating-icon-menu {
     color:#212529;
+}
+.modal {
+    width:fit-content;
+}
+.zoom:hover {
+    width: auto;
+}
+.zoom:focus {
+    width: auto;
+}
+h4 {
+    color: #f8f9fa;
 }
