--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 .light {
     background-color:#f8f9fa;
     color: #212529;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+    font-weight: normal;
 }
 .contac {
     z-index: 1001;
@@ -50,6 +52,7 @@ a {
 }
 .fa-envelope {
     color: #c62828;
+    font-family: "Font Awesome 5 Free";
 }
 small {
     text-align: center;
@@ -68,6 +71,7 @@ small {
 .menu {
     display: flex;
     justify-content: center;
+    
 }
 .menu li {
     display: inline;
@@ -154,6 +158,7 @@ small {
 } 
 .fixed-action-btn {
     top: 5%;
+    height: fit-content;
 }
 
 .btn-floating .floating-icon-menu {
@@ -170,4 +175,49 @@ small {
 }
 h4 {
     color: #f8f9fa;
+}
+footer {
+    display: none;
+}
+.favicon {
+    border-radius: 50px;
+}
+.pop-mess {
+    display: none;
+}
+.cv:hover + .pop-mess {
+    display: block;
+    
+    width: fit-content;
+    position: absolute;
+}
+@media only screen and (max-width: 850px) {
+    .follow {
+        display: none;
+    }
+    footer {
+        display: flex;
+        justify-content: center;
+        top: 100%;
+    }
+}
+@media only screen and (max-width: 800px) {
+    .container-img {
+        display: none;
+    }
+    .title {
+        background-image: url(/img/dev.png);
+        background-repeat:no-repeat;
+        background-size:contain;
+    }
+}
+@media only screen and (max-width:531px) {
+    .collapsible-body {
+        width: auto;
+    }
+}
+@media only screen and (max-width:464px) {
+  .title {
+      margin-top: 10%;
+  }
 }
