--- a/style.css
+++ b/style.css
@@ -186,10 +186,12 @@ footer {
     display: none;
 }
 .cv:hover + .pop-mess {
-    display: block;
-    
+    display: block;   
     width: fit-content;
     position: absolute;
+}
+.collapsible {
+    width: 90%;
 }
 @media only screen and (max-width: 850px) {
     .follow {
