--- a/style.css
+++ b/style.css
@@ -192,6 +192,7 @@ footer {
 }
 .collapsible {
     width: 90%;
+    margin-left: auto;
 }
 @media only screen and (max-width: 850px) {
     .follow {
